--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -715,7 +715,38 @@ body.modal-open .mm-slideout {
   width: 30%;
   max-width: 30%;
 }
+.attack_surface_montring_section svg {
+  width: 100%;
+  max-width: 100%;
+}
+.attack_surface_montring_section svg g {
+  cursor: pointer;
+  opacity: 1 !important;
+}
+.attack_surface_montring_section svg .active_filter {
+  animation: animate-pulse 3s linear infinite;
+}
+.attack_surface_montring_section svg .active_filter path {
+  stroke-opacity: 0;
+  transition: all 0.3s ease-in-out;
+  fill: #fff;
+  fill-opacity: 1;
+}
 
+@keyframes animate-pulse {
+  0% {
+    box-shadow: 0 0 0 0 rgba(255, 109, 74, 0.7), 0 0 0 0 rgba(255, 109, 74, 0.7);
+  }
+  40% {
+    box-shadow: 0 0 0 50px rgba(255, 109, 74, 0), 0 0 0 0 rgba(255, 109, 74, 0.7);
+  }
+  80% {
+    box-shadow: 0 0 0 50px rgba(255, 109, 74, 0), 0 0 0 30px rgba(255, 109, 74, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(255, 109, 74, 0), 0 0 0 30px rgba(255, 109, 74, 0);
+  }
+}
 .factures_cards {
   background-image: linear-gradient(to bottom, #191476, #191476);
   padding: 100px 0;
@@ -1343,6 +1374,7 @@ body.modal-open .mm-slideout {
   height: 56px;
   border-radius: 50%;
   margin-right: 16px;
+  background-color: #fff;
 }
 .testemonial_card .card_img img {
   border-radius: 50%;
@@ -2818,6 +2850,31 @@ body.modal-open .mm-slideout {
     height: 500px !important;
     margin-bottom: 30px;
     margin-top: 30px;
+  }
+  .attack_surface_montring_section .fram1 {
+    display: none;
+  }
+  .attack_surface_montring_section .wrapper_slider_2 .slick-next {
+    top: unset;
+    bottom: -50px;
+    left: 55%;
+    transform: translate(-50%, 0);
+  }
+  .attack_surface_montring_section .wrapper_slider_2 .slick-next::before {
+    content: "\f105";
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
+  }
+  .attack_surface_montring_section .wrapper_slider_2 .slick-prev {
+    top: unset;
+    bottom: -50px;
+    left: 45%;
+    transform: translate(-50%, 0);
+  }
+  .attack_surface_montring_section .wrapper_slider_2 .slick-prev::before {
+    content: "\f104";
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
   }
 }
 @media (max-width: 500px) {
